--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Intro</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
     <style>
+        /* styli wewnetrzene
         h1 {
             color: navy; 
+            text-align: center;
+            font-size: 64px; 
         }
+        p {
+            color: brown;
+            text-align: justify;
+        } */
 
     </style>
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet.</h1>
-    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eius.</h2>
+    <!-- inside-styli  -->
+    <h2 style="font-size: 16px; text-align: center;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eius.</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum perspiciatis sint dolorem blanditiis. Officiis debitis maxime temporibus vel sapiente autem?</p>
     <p>Doloribus quam tempore quo molestias veritatis cum accusantium provident earum officiis. Deserunt facere fuga porro molestias id? Molestiae, facilis iusto.</p>
     <p>Laboriosam nostrum ipsum quam aperiam, assumenda libero iste distinctio rerum. Itaque eveniet voluptate sapiente amet voluptatum labore cumque assumenda reiciendis?</p>
